[package]
name = "esp32-demo"
version = "0.1.0"
authors = ["qianjin.pang <2594622441@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "esp32-demo"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow      = "=1.0.86"
log = "0.4"
esp-idf-svc = { version = "0.49", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
rgb-led     = { path = "./common/lib/rgb-led" }
toml-cfg    = "=0.1.3"
wifi        = { path = "./common/lib/wifi" }

[build-dependencies]
embuild = "0.32.0"
cc = "=1.1.30" # Necessary until a new version of `esp-idf-sys` is released
toml-cfg = "=0.1.3"
